maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:29: error: too many arguments for method avanceVersNord: ()Unit
      case 0 => avanceVersNord(etat); etat = 1;
                              ^IslandMaze:31: error: too many arguments for method suitAGauche: ()Unit
      case 1 => suitAGauche(etat); etat = 0;
                           ^IslandMaze:33: error: missing parameter type
      case_ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
      ^